--- a/pricing.css
+++ b/pricing.css
@@ -1,17 +1,16 @@
-/* styles.css */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #FFE4E1;
     color: #333;
 }
 
 header {
     text-align: center;
     padding: 2em;
-    background-color: #282c34;
-    color: white;
+    background-color: #F0FFFF;
+    color: black;
 }
 
 header h1 {
@@ -79,7 +78,7 @@ header p {
 footer {
     text-align: center;
     padding: 1em;
-    background-color: #282c34;
+    background-color: gray;
     color: white;
 }
 
